--- a/client/assets/styles/base.sass
+++ b/client/assets/styles/base.sass
@@ -3,7 +3,7 @@ html,body
   font-size: 10px
   font-weight: 400
   line-height: 2.4rem  
-  overflow-x: hidden
+  // overflow-x: hidden
 
 html 
   box-sizing: border-box
