--- a/client/components/TheKanyeStory/LeftMenu/style.sass
+++ b/client/components/TheKanyeStory/LeftMenu/style.sass
@@ -1,7 +1,9 @@
 .leftmenu
   width: 32rem
-  margin-right: 8rem
-  display: none
+  position: sticky
+  top: 0
+  height: 50px
+  display: none    
   &__chapters
     font-size: 1.6rem
     text-transform: uppercase
@@ -17,7 +19,6 @@
       color: $blue
 
 .leftmenuinner
-  position: fixed
   display: flex
   flex-direction: column
     
