--- a/client/components/Footer/style.sass
+++ b/client/components/Footer/style.sass
@@ -5,6 +5,8 @@
   align-items: center
   justify-content: space-between
   padding: 6rem 13rem
+  @media screen and (max-width: 600px)
+    display: none
   &__quote
     font-style: italic
     font-size: 1.6rem
