--- a/client/components/Image/style.sass
+++ b/client/components/Image/style.sass
@@ -4,12 +4,21 @@
   margin-top: 2.8rem
 
 img
-  max-width: 98%
+  max-width: 70%
   margin: 0 auto
   border-radius: 2px
+  @media screen and (max-width: 600px)
+    max-width: 100%
 
 .image
   padding: 1rem
   background-color: #EFEFEF
   @media screen and (max-width: 600px)
     padding: 0     
+
+// gram
+
+.gramContainer
+  display: flex
+  justify-content: center
+  margin-top: 2rem
